// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-log-viewer-saved-search-by-name should delete a saved search by name 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;

exports[`delete-log-viewer-saved-search-by-name should handle empty name parameter 1`] = `
{
  "content": [
    {
      "text": "Error using delete-log-viewer-saved-search-by-name:
{
  "message": "Request failed with status code 404",
  "response": ""
}",
      "type": "text",
    },
  ],
}
`;

exports[`delete-log-viewer-saved-search-by-name should handle non-existent saved search 1`] = `
{
  "content": [
    {
      "text": "Error using delete-log-viewer-saved-search-by-name:
{
  "message": "Request failed with status code 404",
  "response": {
    "type": "Error",
    "title": "The log search could not be found",
    "status": 404,
    "operationStatus": "NotFoundLogSearch"
  }
}",
      "type": "text",
    },
  ],
}
`;
